--- a/Prg1.ipynb
+++ b/Prg1.ipynb
@@ -7,14 +7,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 445106903"
+    "# Saleh Mengash 445106903"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "id": "f3c8b7a4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -147,7 +149,9 @@
    "id": "f7d96055",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Saleh Mengash 445106903"
+   ]
   },
   {
    "cell_type": "code",
